# SimpleBankAPI

./: .env.example  .gitignore  BUILD.bazel  Dockerfile  Package.resolved  Package.swift  README.md  WORKSPACE  bazel-SimpleBankAPI  bazel-bin  bazel-out  bazel-testlogs  docker-compose.yml  fluent-postgres-driver.BUILD  fluent.BUILD  nio.BUILD  vapor.BUILD
Sources/App/: configure.swift
Sources/App/Controllers/: UserController.swift
Sources/App/Migrations/: CreateUser.swift
Sources/App/Models/: UserModel.swift
Sources/App/Services/: UserService.swift
Tests/Controller/: UserControllerTests.swift
Tests/Migrations/: CreateUserMigrationTests.swift
Tests/Models/: UserModelTests.swift
Tests/Services/: UserServiceTests.swift
