load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

swift_library(
    name = "SimpleBankAPILib",
    srcs = glob(["Sources/**/*.swift"]),
    deps = [
        "@vapor//:Vapor",
        "@fluent//:fluent",
        "@fluent-postgres-driver//:fluent-postgres-driver",
    ],
)

swift_binary(
    name = "SimpleBankAPI",
    deps = [":SimpleBankAPILib"],
)